SQUASH: fix author css color

--- a/inspirehep/modules/theme/static/scss/holding-pen/holding-pen.scss
+++ b/inspirehep/modules/theme/static/scss/holding-pen/holding-pen.scss
@@ -488,7 +488,6 @@ $hp_table_bg: #fff;
       .record-authors {
         list-style: none;
         -webkit-padding-start: 0;
-        color: white;
 
         li {
           display: inline-block;
